Ecom 1234 fix overlapping checkout box (#842)
* ECOM-1234: remove styles causing overlap issue

* ECOM-1234: add override template to remove hidden unneeded block and collapsible functionality

* ECOM-1234: adjust styles to compensate for removed block

--- a/app/design/frontend/Scottsbase/mygro/web/css/source/_mygrocheckout.scss
+++ b/app/design/frontend/Scottsbase/mygro/web/css/source/_mygrocheckout.scss
@@ -478,7 +478,9 @@
                           }
                         }
                         .content.minicart-items{
-                          display:block !important;
+                          margin-top: 2.5rem;
+                          border-top: 1px solid #ccc;
+                          padding-top: .75rem;
                         }
                       }
                     }
@@ -544,10 +546,6 @@
     margin: 0 0 10px;
   }
   .opc-block-summary {
-    .items-in-cart > .title{
-      background: #f5f5f5;
-      z-index: 9;
-    }
     .items-in-cart > .title:after{
       display:none;
     }
@@ -557,9 +555,6 @@
     }
     .minicart-items-wrapper{
       max-height: none;
-    }
-    .block.items-in-cart .title strong{
-      font-size:0;
     }
     .product.options{
       .item-options{
